Added standard view of level and used custom widget on the admin panel of django

--- a/AllinadventuresAPI/activity/templates/widgets/my_widget.html
+++ b/AllinadventuresAPI/activity/templates/widgets/my_widget.html
@@ -1,3 +1,1 @@
-<textarea id="mywidget-{{ widget.name }}" name="{{ widget.name }}">
-    {% if widget.value %}{{ widget.value }}{% endif %}</textarea>
-
+<input id="thisMyId" type="{{ widget.type }}" name="{{ widget.name }}"{% if widget.value != None %} value="{{ widget.value|stringformat:'s' }}"{% endif %}{% include "django/forms/widgets/attrs.html" %}>
